// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default button matches snapshot 1`] = `
<div
  className="flex"
>
  <button
    className="button blue"
  >
    Default button
  </button>
</div>
`;

exports[`Green button matches snapshot 1`] = `
<div
  className="flex"
>
  <button
    className="button green"
  >
    Green button
  </button>
</div>
`;

exports[`Link button matches snapshot 1`] = `
<div
  className="flex"
>
  <a
    className="button blue"
    href="https://google.com"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    rel="noreferrer noopener"
    target="_blank"
  >
    Link button
  </a>
</div>
`;

exports[`White button matches snapshot 1`] = `
<div
  className="flex"
>
  <button
    className="button white"
  >
    White button
  </button>
</div>
`;
